# simple-mobile-robot

./: README.md  make_ast.sh  robot.urdf
src/move_robot/: package.xml  setup.py
src/move_robot/scripts/: cmd_vel_publisher.py  cmd_vel_subscriber.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: sim_launch.py
src/robot_description/urdf/: robot.urdf  robot.urdf.xacro
