<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>Mobile robot with a stereo camera for ROS 2 simulation.</description>
  <maintainer email="anshium@anshium.com">anshium</maintainer> <!-- Lol, this is not my email.-->
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros2launch</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
